# Network-Bias-Dynamics

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: compare_topologies.yaml  single_biased_node.yaml
notebooks/: 00_quick_demo.ipynb  colab_app.ipynb
scripts/: run_compare_topologies.py  run_single_biased_node.py
src/network_bias_dynamics/: __init__.py  analysis.py  dynamics.py  graphs.py  noise.py  plotting.py  simulate.py
tests/: test_dynamics.py  test_graphs.py  test_noise.py  test_noise_reuse.py  test_simulate.py  test_single_bias_ordering.py
